--- a/02.Modeling.ipynb
+++ b/02.Modeling.ipynb
@@ -33,13 +33,8 @@
    "source": [
     "<br></br>\n",
     "## 1 단어빈도 측정\n",
-    "n-gram"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "n-gram\n",
+    "\n",
     "### 01 n-Gram token으로 생성하기\n",
     "1-gram, 2-gram, 3-gram"
    ]
@@ -125,7 +120,6 @@
    "source": [
     "# token 생성\n",
     "from nltk.corpus import webtext\n",
-    "\n",
     "tokens=[t.lower()    for t in webtext.words('grail.txt')]\n",
     "print(len(tokens), tokens[:45])"
    ]
@@ -146,9 +140,9 @@
    "source": [
     "# bi-gram 중, 우도비율 상위 10개 목록 출력\n",
     "from nltk.collocations import BigramCollocationFinder\n",
-    "from nltk.metrics import BigramAssocMeasures\n",
-    "\n",
     "words = BigramCollocationFinder.from_words(tokens)\n",
+    "\n",
+    "from nltk.metrics import BigramAssocMeasures\n",
     "print('bi-gram   :' ,words.nbest(BigramAssocMeasures.likelihood_ratio, 10))"
    ]
   },
@@ -167,9 +161,9 @@
    ],
    "source": [
     "from nltk.collocations import TrigramCollocationFinder\n",
-    "from nltk.metrics import TrigramAssocMeasures\n",
-    "\n",
     "words = TrigramCollocationFinder.from_words(tokens)\n",
+    "\n",
+    "from nltk.metrics import TrigramAssocMeasures\n",
     "print('Tri-gram   :' ,words.nbest(TrigramAssocMeasures.likelihood_ratio, 10))"
    ]
   },
@@ -181,13 +175,8 @@
     "## 2 텍스트의 MLE 개발 (Multinomial logistic regression : 다항 기호 논리학 회귀식)\n",
     "주어진 발생에 대한 확률분포를 포함하는 freqdist를 생성한다\n",
     "\n",
-    "http://www.nltk.org/howto/probability.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "http://www.nltk.org/howto/probability.html\n",
+    "\n",
     "### 01 token 을  freqdist 객체로 변환하기\n",
     "nltk.FreqDist() : 단어의 빈도 추출"
    ]
@@ -292,7 +281,7 @@
     "\n",
     "$x_0, x_1..$ : 은닉상태 , $y_0, y_1 ..$ : 관찰 가능한 상태\n",
     "\n",
-    "<img src=\"http://iacs-courses.seas.harvard.edu/courses/am207/blog/hmm.png\" align='left' width='600'>"
+    "<p><img src=\"http://iacs-courses.seas.harvard.edu/courses/am207/blog/hmm.png\" align='left' width='600'>"
    ]
   },
   {
@@ -354,7 +343,8 @@
     "# nltk의 unique_list 내부 살펴보기\n",
     "# tag 살펴보기\n",
     "from nltk.util import unique_list\n",
-    "tag_set = unique_list(tag     for sent in cor     for (word,tag) in sent)\n",
+    "tag_set = unique_list( tag     for sent        in  cor     \n",
+    "                               for (word, tag) in  sent )\n",
     "print(len(tag_set))\n",
     "tag_set[::10]"
    ]
@@ -384,7 +374,8 @@
    ],
    "source": [
     "# sentence 살펴보기 \n",
-    "symbols = unique_list(word    for sent in cor     for (word,tag) in sent)\n",
+    "symbols = unique_list( word     for sent        in  cor    \n",
+    "                                for (word, tag) in  sent )\n",
     "print(len(symbols)); symbols[::250]"
    ]
   },
@@ -421,7 +412,9 @@
    "metadata": {},
    "source": [
     "### 02 최대 우도추정 모델\n",
-    "Maximum Likelihood Estimation"
+    "MLE : Maximum Likelihood Estimation\n",
+    "\n",
+    "http://www.nltk.org/howto/probability.html"
    ]
   },
   {
@@ -433,7 +426,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function <lambda> at 0x7fd8e8381400>\n",
+      "<function <lambda> at 0x7fc7c09f59d8>\n",
       "22.75%\n"
      ]
     }
@@ -560,13 +553,8 @@
    "source": [
     "<br></br>\n",
     "## 4 MLE 모델의 Smoothing 적용\n",
-    "DB에 포함되지 않은단어 분석시, 0%확률을 보완하는 방법"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "DB에 포함되지 않은단어 분석시, 0%확률을 보완하는 방법\n",
+    "\n",
     "### 01 Add-one smoothing\n",
     "모든 데이터에 count 1을 추가하여 %를 보완한다"
    ]
@@ -580,7 +568,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12 {'you', 'find', 'interesting.', 'the', 'are', 'Hope', 'hello', '</s>', 'doing?', 'book', 'how', '<s>'}\n"
+      "12 {'interesting.', 'book', 'you', 'are', 'find', '<s>', 'hello', 'how', '</s>', 'the', 'Hope', 'doing?'}\n"
      ]
     }
    ],
@@ -594,7 +582,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -630,20 +620,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "token :  <s>how are\n",
-      "token :  are you\n",
-      "token :  you doing</s>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['token :', ('<s>how', 'are'), ('are', 'you'), ('you', 'doing</s>')]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# token의 생성\n",
     "sentence = u\"<s>how are you doing</s>\".split()\n",
-    "for (a,b) in nltk.bigrams(sentence):\n",
-    "    print('token : ',a, b)"
+    "['token :'] + [ (a, b)     for (a, b) in nltk.bigrams(sentence)]  # tuple로 출력"
    ]
   },
   {
@@ -822,9 +812,20 @@
     }
    ],
    "source": [
+    "# nltk.ConditionalProbDist\n",
     "# LaplaceProbDist : smoothing 된 PorbDist 추가 기능\n",
     "cpd_laplace = nltk.ConditionalProbDist(cfd, nltk.LaplaceProbDist, bins=len(vocabulary))\n",
     "[cpd_laplace[a].prob(b) for (a,b) in nltk.bigrams(sentence)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02 Good Turing\n",
+    "선형회귀식을 활용하여 로그공간에 빈도의 근사치로 보완\n",
+    "\n",
+    "$ c' = (c+1)N(c+1)/N(c)for$ c >= 1    cf)c == 0일떄 0의 빈도를 갖는 샘플 : N(1)"
    ]
   },
   {
@@ -845,6 +846,7 @@
    ],
    "source": [
     "import inspect\n",
+    "corpus = u\"<s> hello how are you doing? Hope you find the book interesting. </s>\".split()\n",
     "inspect.getfile(nltk.SimpleGoodTuringProbDist)"
    ]
   },
@@ -899,7 +901,7 @@
    ],
    "source": [
     "# SGT 모형생성\n",
-    "sgt_pd=nltk.SimpleGoodTuringProbDist(freq_corpus)\n",
+    "sgt_pd = nltk.SimpleGoodTuringProbDist(freq_corpus)\n",
     "sgt_pd.discount()"
    ]
   },
@@ -953,7 +955,7 @@
    ],
    "source": [
     "# SGT 결과\n",
-    "[sgt_pd.smoothedNr(v+1) for v in range(10)]"
+    "[sgt_pd.smoothedNr(v+1)      for v in range(10)]"
    ]
   },
   {
@@ -1038,7 +1040,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "plot_sgt = pd.DataFrame([sgt_pd.smoothedNr(v+1) for v in range(10)])\n",
+    "plot_sgt = pd.DataFrame([sgt_pd.smoothedNr(v+1)   for v in range(10)])\n",
     "plot_sgt"
    ]
   },
@@ -1050,7 +1052,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd8e256c7b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc7bad32cf8>"
       ]
      },
      "execution_count": 36,
@@ -1061,7 +1063,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAAD8CAYAAABn919SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGatJREFUeJzt3WtsXOd95/Hvf2Y44kXkDC1RNw4dSWtbK1uiIkdp0yZr\nBHG8SRzXqb154S5StE0L94XbJt0FinTfBH3nAEXRAlkEEJy0AZrYaB2p9gaN4myS3W6TXbmybtbF\ntmLLjoa6kLqRlEh6yJn/vpgZiqRIccgZzjlz5vcBCJ45c+Y8/zDyjw+f85zzmLsjIiKNLxZ0ASIi\nUhsKdBGRiFCgi4hEhAJdRCQiFOgiIhGhQBcRiQgFuohIRCjQRUQiQoEuIhIRiXo2tnbtWt+8eXM9\nmxQRaXivvfbaZXfvWey4ugb65s2bOXToUD2bFBFpeGb2XiXHachFRCQiFOgiIhGhQBcRiYi6jqGL\niARhcnKSbDbLxMRE0KXcUWtrK5lMhpaWlmV9XoEuIpGXzWbp7Oxk8+bNmFnQ5czL3bly5QrZbJYt\nW7Ys6xwachGRyJuYmGDNmjWhDXMAM2PNmjVV/RWhQBeRphDmMC+rtsa6BvroxFQ9mxMRaSp1DfTr\nY7l6NiciEioHDhxg27Zt3HPPPTz77LM1P39dA31sMl/P5kREQiOfz/PMM8/wgx/8gFOnTvH8889z\n6tSpmrZR10DPTRUYHp+sZ5MiIqHw6quvcs8997B161aSySRPPfUUL730Uk3bqPu0xdezw3zs3rX1\nblZEBIC/+B8nOXV+pKbnvH9TF1/9jQfueMzAwAB9fX3TrzOZDAcPHqxpHXWf5XIse73eTYqINIW6\n9tCT8RjHFegiEqDFetIrpbe3l3Pnzk2/zmaz9Pb21rSNuvbQ25NxjmeH69mkiEgofPjDH+bMmTOc\nPXuWXC7HCy+8wOOPP17TNuraQ29LxrkwPMHg6ATrOlvr2bSISKASiQRf//rX+dSnPkU+n+eLX/wi\nDzxQ278W6h7o4xQvjD68XYEuIs3l0Ucf5dFHH12x89d1yKWtJU7M4JiGXUREaq6ugR4z4771nbow\nKiKyAuo+bbE/k+J4dhh3r3fTItLEGiFzqq2x7oG+M5Pm6s0c2Wvj9W5aRJpUa2srV65cCXWol5+H\n3tq6/OuLdb9TdFcmBcDx7DB9d7XXu3kRaUKZTIZsNsvQ0FDQpdxRecWi5ap7oP/7DV3TNxh9tn9j\nvZsXkSbU0tKy7FWAGsmiQy5m9i0zGzSzEzP23WVmPzKzM6Xv3ZU2mEzE2L6xU48AEBGpsUrG0P8O\n+PScfV8Bfuzu9wI/Lr2uWH8mzYmBEQqF8I5niYg0mkUD3d3/Bbg6Z/fngG+Xtr8N/OZSGu3PpLjx\n/hTvXL6xlI+JiMgdLHeWy3p3v1DavgisX+hAM3vazA6Z2aHyBYldfWkAjp3TDUYiIrVS9bRFL84D\nWnDsxN33uvsed9/T09MDwL/rWV16UJfG0UVEamW5gX7JzDYClL4PLuXD8ZixozelRwCIiNTQcgP9\nZeB3Stu/Ayx5HaVdmRSnLoyQmyosswQREZmpkmmLzwP/F9hmZlkz+33gWeARMzsDfLL0ekn6M2ly\nUwXeujS61I+KiMg8Fr2xyN1/a4G3Hq6m4V2Z0oXR7HV29KaqOZWIiBDAs1zK+u5qo7u9heOa6SIi\nUhOBBbqZsTOT1h2jIiI1EligQ/HC6JnBG4zn8kGWISISCYEGen8mTb7gnDyvYRcRkWoF3kMHLUkn\nIlILgQb6uq5WNnS16o5REZEaCDTQ4daSdCIiUp3AA31XX5qzl28yPD4ZdCkiIg0t8EDvL42jv65e\nuohIVYIP9N5bd4yKiMjyBR7oqfYWNq9p14VREZEqBR7oUJyPrgujIiLVCUmgp7gwPMHg6ETQpYiI\nNKxQBHp5STo9qEtEZPlCEegPbOoiZmgcXUSkCqEI9PZkgvvWd+oRACIiVQhFoEP5jtHrFNecFhGR\npQpRoKe5NjZJ9tp40KWIiDSk0AT6zCXpRERk6UIT6Ns2dJKMxzQfXURkmUIT6MlEjO2bujh2Tj10\nEZHlCE2gQ3HBixMDw+QLujAqIrJUoQr0/kyam7k87wzdCLoUEZGGE6pA15J0IiLLF6pA39qzmo5k\nXHeMiogsQ6gCPR4zdvSm1EMXEVmGUAU6FO8YPX1+hNxUIehSREQaSlWBbmZ/amYnzeyEmT1vZq3V\nFtSfSZPLF3jz4mi1pxIRaSrLDnQz6wX+BNjj7juAOPBUtQXpjlERkeWpdsglAbSZWQJoB85XW1Df\nXW10t7fowqiIyBItO9DdfQD4S+CXwAVg2N1fmXucmT1tZofM7NDQ0NCi5zUzdmpJOhGRJatmyKUb\n+BywBdgEdJjZF+Ye5+573X2Pu+/p6emp6Ny7MinODN5gPJdfbnkiIk2nmiGXTwJn3X3I3SeBfcCv\n16Ko/kyafME5eV69dBGRSlUT6L8EPmJm7WZmwMPA6VoUpTtGRUSWrpox9IPAi8Bh4PXSufbWoqh1\nXa1s6GrVhVERkSVIVPNhd/8q8NUa1TJLcUk69dBFRCoVujtFy3b1pTl7+SbD45NBlyIi0hBCG+j9\npXH019VLFxGpSHgDvVd3jIqILEVoAz3V3sLmNe26MCoiUqHQBjoU56PrwqiISGVCHugpLgxPMDg6\nEXQpIiKhF+pA39VXHEc/fk69dBGRxYQ60B/Y1EXM0Di6iEgFQh3o7ckE963v1CMAREQqEOpAh/Id\no9dx96BLEREJtQYI9DTXxibJXhsPuhQRkVALfaBrSToRkcqEPtC3begkGY9pPrqIyCJCH+jJRIzt\nm7o4dk49dBGROwl9oENxwYsTA8PkC7owKiKykIYI9P5Mmpu5PO8M3Qi6FBGR0GqIQNeSdCIii2uI\nQN/as5qOZFx3jIqI3EFDBHo8ZuzoTamHLiJyBw0R6FB8UNfp8yPkpgpBlyIiEkoNE+j9mRS5fIE3\nL44GXYqISCg1TKDrjlERkTtrmEDPdLfR3d6iC6MiIgtomEA3My1JJyJyBw0T6FCcj/7WpVHGclNB\nlyIiEjoNFej9mTQFh5PnR4IuRUQkdKoKdDNLm9mLZvaGmZ02s1+rVWHz6S/fMaoHdYmI3CZR5ef/\nBjjg7p83syTQXoOaFrSuq5UNXa0aRxcRmceyA93MUsBDwO8CuHsOyNWmrIWVl6QTEZHZqhly2QIM\nAX9rZkfM7Dkz66hRXQva1Zfm3StjDI9NrnRTIiINpZpATwAPAt9w993ATeArcw8ys6fN7JCZHRoa\nGqqiuaLyOPrxAfXSRURmqibQs0DW3Q+WXr9IMeBncfe97r7H3ff09PRU0VxRf2/xjlGNo4uIzLbs\nQHf3i8A5M9tW2vUwcKomVd1Bqr2FzWvaNdNFRGSOame5/DHwndIMl3eA36u+pMX1Z9K8evZqPZoS\nEWkYVQW6ux8F9tSolor1Z1K8fOw8gyMTrOtqrXfzIiKh1FB3ipbt6is/eVHj6CIiZQ0Z6A9s6iJm\naD66iMgMDRno7ckE963vVA9dRGSGhgx0uHXHqLsHXYqISCg0cKCnuT42ybmr40GXIiISCg0b6FqS\nTkRktoYN9G0bOknGY7owKiJS0rCBnkzE2L6pS48AEBEpadhAh+KSdCcGhskXdGFURKShA70/k+Zm\nLs87QzeCLkVEJHANHei7ykvSadhFRKSxA31rz2o6knFdGBURocEDPR4zdvSm1EMXEaHBAx2KD+o6\nfX6E3FQh6FJERALV8IHen0mRyxd48+Jo0KWIiASq4QNdd4yKiBQ1fKBnutvobm/RhVERaXoNH+hm\nRn8mrTtGRaTpNXygQ3E++luXRhnLTQVdiohIYCIR6P2ZNAWHk+dHgi5FRCQw0Qj0vtIdo+c0ji4i\nzSsSgb6us5WNqVaNo4tIU4tEoMOtJelERJpVhAI9zbtXxhgemwy6FBGRQEQm0Ms3GB0fUC9dRJpT\nZAJ9Z+lRuhpHF5FmFZlAT7W1sGVth2a6iEjTqjrQzSxuZkfM7Pu1KKgaxQuj6qGLSHOqRQ/9S8Dp\nGpynav2ZNBdHJhgcmQi6FBGRuqsq0M0sA3wWeK425VRHS9KJSDOrtof+18CfAaFYXeL+TV3EDM1H\nF5GmtOxAN7PHgEF3f22R4542s0NmdmhoaGi5zVWkPZngvvWd6qGLSFOqpof+UeBxM3sXeAH4hJn9\n/dyD3H2vu+9x9z09PT1VNFeZ8h2j7r7ibYmIhMmyA93d/9zdM+6+GXgK+Im7f6FmlS1TfybN9bFJ\nzl0dD7oUEZG6isw89DItSScizaomge7u/8vdH6vFuaq1bUMnyXhMF0ZFpOlEroeeTMTYvqlLF0ZF\npOlELtChOB/9xMAw+YIujIpI84hkoPdn0ozl8rw9dCPoUkRE6iaSgT59x6ge1CUiTSSSgb61ZzUd\nybge1CUiTSWSgR6PGTt6tSSdiDSXSAY6wK6+NKcvjJKbCsVjZkREVlxkA70/kyKXL/DGxZGgSxER\nqYvIBvqtO0Y1ji4izSGygZ7pbqO7vYXjmukiIk0isoFuZvRn0prpIiJNI7KBDsX56GcGRxnLTQVd\niojIiot0oPdn0hQcTgzowqiIRF+0A72veMeo5qOLSDOIdKCv62xlY6pVM11EpClEOtDh1pJ0IiJR\n1wSBnua9K2NcH8sFXYqIyIqKfKCXbzDS9EURibrIB/rOjC6MikhziHygp9pa2LK2Qz10EYm8yAc6\nlC+MKtBFJNqaJNDTXByZYHBkIuhSRERWTFME+vSSdOqli0iENUWgP7ApRTxmujAqIpHWFIHeloxz\n77rV6qGLSKQ1RaBDcT768ex13D3oUkREVkTTBHp/X4rrY5OcuzoedCkiIiti2YFuZn1m9lMzO2Vm\nJ83sS7UsrNZuLUmncXQRiaZqeuhTwH919/uBjwDPmNn9tSmr9rZt6CSZiOnCqIhE1rID3d0vuPvh\n0vYocBrorVVhtdYSj3H/xi5dGBWRyKrJGLqZbQZ2Awdrcb6VsiuT4sTAMPmCLoyKSPRUHehmthr4\nHvBld79trTcze9rMDpnZoaGhoWqbq8rOTJqxXJ63h24EWoeIyEqoKtDNrIVimH/H3ffNd4y773X3\nPe6+p6enp5rmqjZ9x+g5jaOLSPRUM8vFgG8Cp939r2pX0srZ2rOajmRcD+oSkUiqpof+UeC3gU+Y\n2dHS16M1qmtFxGPGjl4tSSci0ZRY7gfd/V8Bq2EtdbGrL83f/exdclMFkommua9KRJpA0yVafyZF\nLl/gjYu3Xb8VEWloTRfot+4Y1Ti6iERL0wV6pruN7vYWjmumi4hETNMFupnRn0lrpouIRE7TBToU\n56OfGRxlLDcVdCkiIjXTlIHen0lTcDgxoAujIhIdzRnofcU7RjUfXUSipCkDfV1nKxtTrZrpIiKR\n0pSBDsX56Oqhi0iUNHGgp3nvyhjXx3JBlyIiUhNNG+jlG4w0fVFEoqJpA31nRhdGRSRamjbQU20t\nbFnbwfePX+Dnv7hMQasYiUiDa9pAB/jDh7aSvTbOf37uIB/72k/42oE3OHNpNOiyRESWxdzr1zPd\ns2ePHzp0qG7tVWI8l+dHpy+x73CW/3PmMvmCs7M3xRO7e3n8g5tYu3pV0CWKSJMzs9fcfc+ixzV7\noM80NPo+Lx87z77DWU6eHyEeMx66dy1PPpjhkfvX09oSD7pEEWlCCvQqvXVplH2HB3jp6AAXhifo\nXJXgMzs38MTuDL+65S5isYZb20NEGpQCvUbyBef/vXOFfYcHOHDiAjdzeXrTbfzm7k08sTvDPetW\nB12iiEScAn0FjOWmeOXkJfYdGeBfzwxR8OKTG5/Y3ctv7NrEGo23i8gKUKCvsMGRCV4+dp7vHR7g\n9IUREjHj49t6eGJ3hoe3r9N4u4jUjAK9jt64OML+wwP809EBLo28T2drgsf6N/LE7gx7PtCt8XYR\nqYoCPQD5gvPzty+z//AAB05eZCyXJ9PdxpO7e3niwQxb1nYEXaKINCAFesBuvj/FD09eZP+RAX72\ni8sUHD7Yl+Y/PdjLY/2b6O5IBl2iiDQIBXqIXBye4KWjA+w/MsAbF0dpiRsf37aOJ3f38ont61iV\n0Hi7iCxMgR5Sp86PsP9Iln86ep6h0fdJtbXw2f6NPLm7lw99oBszjbeLyGwK9JCbyhf42dtX2H84\nyw9PXmJ8Ms/dd7XzxO5eHrl/Peu6VpFuS5JMNPXjdkQEBXpDufH+FAdOXGT/kSw/f/sKM/8vWb0q\nQbq9he72JOn2Fu7qSE5vz/x+V8et7fZkXD19kQipNNATVTbyaeBvgDjwnLs/W835mtXqVQk+/6EM\nn/9QhgvD47z23jWujU1y7WaOa2M5ro9Ncm0sx7WxSd67Msa1sRyjE1MLni8Zj02H/63gT9Jd2u7u\nKG7P3Jdqa9H0SpEGt+xAN7M48N+BR4As8G9m9rK7n6pVcc1oY6qNx/rbFj1uKl/g+vgk18dyXL05\nWQr+YuhfG8tx/eYkV0v7zgzemH4vv8Bz380g3dYyp/dfCvyOYuCvSsRIJmK0xMtfRjIeoyUx5/X0\nvuLr8mcSMdNfDiIrqJoe+q8Av3D3dwDM7AXgc4ACvQ4S8RhrV69a0uN93Z2RianZwT+W49rN8l8A\nxf3Xx3JcGJ7g1IURro3lmJgs1KzuZCn4y78Epl/P+EWQnPk6HiOZmP16VemXRSIeI25GLGbEjOlt\nK2/PfK/0yyRWwXtmRrz0XmzO+We+d9txZsRixW2j+EsSivXM3GelfUCx3jn7i6/nbM88JrbAflvg\nPOVj9Ms08qoJ9F7g3IzXWeBXqytHVpKZkWprIdXWwgfWVP65ick8w+OT5KYKTOYLTOadyXyBXL7A\n5FTpe75AbspL75de553JqTmvS5+Z9XqBz9/M5We0WW5r9jH5gqPFppaunO3l0C9vl98zZhwwfVx5\n2xY9BzbzfLeOv23fPDXN3Dvzd9D8x86odYHjF/pFNuvYBc433/tza7l1zDyfW3RH5eeqRFVj6JUw\ns6eBpwHuvvvulW5OVkBrSzz0z6YpFJyCO3l33Clul8K+/F6htL/8njulY+Z/b9Y53CkUbj//7HM4\n+QI4xf1O8a8iYPozM/c7QHl/6Zi5n3W/dext+2cdO+O1L7C//MMq13Rrk1I1s46b9d70dvm9Ox8/\nd67F9P/eedqcvY/b9s19Z+b+WdtLON/MYxfYnFX7/JUsVOv8x803AWXevsjcnx3Oj+c7bh7VBPoA\n0Dfjdaa0b3Yx7nuBvVCc5VJFeyILisWMGLbyPRSRAHzjC5UdV80k538D7jWzLWaWBJ4CXq7ifCIi\nUoVld2jcfcrM/gj4IcVpi99y95M1q0xERJakqr9Q3f2fgX+uUS0iIlIF3VcuIhIRCnQRkYhQoIuI\nRIQCXUQkIhToIiIRUdfH55rZKPBm3RqszFrgctBFzKGaKhfGulRTZVRT5ba5e+diB9X7xro3K3mm\nbz2Z2SHVtLgw1gThrEs1VUY1Vc7MKlpIQkMuIiIRoUAXEYmIegf63jq3VwnVVJkw1gThrEs1VUY1\nVa6iuup6UVRERFaOhlxERCKiLoFuZp82szfN7Bdm9pV6tLkYM/uWmQ2a2Ymgaykzsz4z+6mZnTKz\nk2b2pRDU1Gpmr5rZsVJNfxF0TWVmFjezI2b2/aBrATCzd83sdTM7WumshHows7SZvWhmb5jZaTP7\ntYDr2Vb6GZW/Rszsy0HWVKrrT0v/xk+Y2fNm1hqCmr5UqudkRT+j4uomK/dF8dG6bwNbgSRwDLh/\npdutoK6HgAeBE0HXMqOmjcCDpe1O4K2gf1YUV8haXdpuAQ4CHwn6Z1Wq578A3wW+H3QtpXreBdYG\nXcc8dX0b+IPSdhJIB13TjNriwEXgAwHX0QucBdpKr/8B+N2Aa9oBnADaKU4x/5/APXf6TD166NOL\nSbt7DigvJh0od/8X4GrQdczk7hfc/XBpexQ4TfEfWpA1ubvfKL1sKX0FfuHFzDLAZ4Hngq4lzMws\nRbHz8k0Ad8+5+/Vgq5rlYeBtd38v6EIohmabmSUohuj5gOvZDhx09zF3nwL+N/DknT5Qj0CfbzHp\nQEOqEZjZZmA3xR5xoEpDG0eBQeBH7h54TcBfA38GFIIuZAYHXjGz10pr6YbBFmAI+NvS8NRzZtYR\ndFEzPAU8H3QR7j4A/CXwS+ACMOzurwRbFSeA/2Bma8ysHXiU2ct+3kYXRUPIzFYD3wO+7O4jQdfj\n7nl3/yDFdWN/xcx2BFmPmT0GDLr7a0HWMY+PufuDwGeAZ8zsoaALotjrfBD4hrvvBm4CYbmOlQQe\nB/4xBLV0Uxw52AJsAjrMrMKVPFeGu58Gvga8AhwAjgL5O32mHoFe0WLSUmRmLRTD/Dvuvi/oemYq\n/an+U+DTAZfyUeBxM3uX4hDeJ8zs74MtabqXh7sPAvspDjcGLQtkZ/xV9SLFgA+DzwCH3f1S0IUA\nnwTOuvuQu08C+4BfD7gm3P2b7v4hd38IuEbxutqC6hHoWky6QmZmFMc6T7v7XwVdD4CZ9ZhZurTd\nBjwCvBFkTe7+5+6ecffNFP89/cTdA+1NmVmHmXWWt4H/SPFP5kC5+0XgnJltK+16GDgVYEkz/RYh\nGG4p+SXwETNrL/13+DDFa1iBMrN1pe93Uxw//+6djl/xh3N5SBeTNrPngY8Da80sC3zV3b8ZbFV8\nFPht4PXSmDXAf/Pi2q1B2Qh828ziFDsA/+DuoZgmGDLrgf3FLCABfNfdDwRb0rQ/Br5T6lC9A/xe\nwPWUf+k9Avxh0LUAuPtBM3sROAxMAUcIx12j3zOzNcAk8MxiF7R1p6iISETooqiISEQo0EVEIkKB\nLiISEQp0EZGIUKCLiESEAl1EJCIU6CIiEaFAFxGJiP8Pqzwh6SLb8IAAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fd8e3f71400>"
+       "<matplotlib.figure.Figure at 0x7fc7bc6d8358>"
       ]
      },
      "metadata": {},
@@ -1071,16 +1073,6 @@
    "source": [
     "%matplotlib inline\n",
     "plot_sgt.plot(kind='line')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 02 Good Turing\n",
-    "선형회귀식을 활용하여 로그공간에 빈도의 근사치로 보완\n",
-    "\n",
-    "$ c' = (c+1)N(c+1)/N(c)for c>=1 $   cf)c == 0일떄 0의 빈도를 갖는 샘플 : N(1)"
    ]
   },
   {
@@ -1108,7 +1100,7 @@
     "# nltk 의 simple Good Turing \n",
     "from nltk import  SimpleGoodTuringProbDist\n",
     "\n",
-    "gt = lambda fd, bins: SimpleGoodTuringProbDist(fd, bins=1e5)\n",
+    "gt = lambda fd, bins : SimpleGoodTuringProbDist(fd, bins=1e5)\n",
     "train_and_test(gt)"
    ]
   },
