--- a/06.Meaning.ipynb
+++ b/06.Meaning.ipynb
@@ -5,8 +5,23 @@
    "metadata": {},
    "source": [
     "# Chapter 6 - Semantic Analysis – Meaning Matters\n",
+    "의미 분석 - 본질의 표현 찾기\n",
     "\n",
-    "의미 분석 - 본질의 표현 찾기"
+    "http://norman3.github.io/prml/docs/chapter09/2.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 최대 우도 예측 Maximum Likelihood Estimation (MLE) : 사전확률 필요없이 간단하게 구현가능, 정확도 낮음\n",
+    "# 다항 분류기 Multilayer Perceptron Classifier (MPC) : 사전확률 필요, 대신 정확도 높음\n",
+    "# GMM (가우시안 혼합 분포를 EM으로 처리  : EM for Gaussian mixtures)\n",
+    "# HMM (히든 마르코프 모델을 활용하여 처리 : Hidden Markov Model)"
    ]
   },
   {
@@ -55,8 +70,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 01 Introduction\n",
-    "기본 연산함수 내용정리"
+    "### 01 의미 연산자 WFF\n",
+    "Well formed Formulas"
    ]
   },
   {
@@ -84,6 +99,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# negation   (부정)    -\n",
+    "# conjunction(연결)    &\n",
+    "# disjunction(분리)    |\n",
+    "# implication(암시)    ->\n",
+    "# equivalence(등가)    <->"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -100,7 +130,7 @@
    ],
    "source": [
     "# Well formed Formulas : 명제기호나, 명제 기호와 Boolean 연산의 조합을 활용\n",
-    "import nltk\n",
+    "# import nltk\n",
     "input_expr = nltk.sem.Expression.fromstring\n",
     "print(input_expr('X | (Y -> Z)'))\n",
     "print(input_expr('-(X & Y)'))\n",
@@ -127,7 +157,7 @@
    ],
    "source": [
     "# 논리 표현식에 True/ False 값을 매핑\n",
-    "import nltk\n",
+    "# import nltk\n",
     "value = nltk.Valuation([('X', True), ('Y', False), ('Z', True)])\n",
     "print(value['Z'])\n",
     "domain = set()\n",
@@ -157,7 +187,7 @@
    ],
    "source": [
     "# NLTK의 상수 및 술어를 포함하는 1차 술어논리를 구현\n",
-    "import nltk\n",
+    "# import nltk\n",
     "input_expr = nltk.sem.Expression.fromstring\n",
     "expression = input_expr('run(marcus)', type_check=True)\n",
     "print(expression.argument)\n",
@@ -183,6 +213,16 @@
     "sign = {'run': '<e, t>'}\n",
     "expression = input_expr('run(marcus)', signature=sign)\n",
     "print(expression.function.type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02 <strong> On Tology</strong> DB\n",
+    "CFG (Control Flow Graph)  Query \n",
+    "\n",
+    "<strong>Feature 차트</strong>의 파싱"
    ]
   },
   {
@@ -221,10 +261,34 @@
     }
    ],
    "source": [
-    "# Signature는 연관유형 및 비논리 상수를 매핑\n",
-    "\n",
+    "# .show_cfg : Signature는 연관유형 및 비논리 상수를 매핑\n",
     "import nltk\n",
     "nltk.data.show_cfg('grammars/book_grammars/sql1.fcfg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Tree(S[SEM=(SELECT, City FROM city_table, WHERE, , , Country=\"greece\")], [Tree(NP[SEM=(SELECT, City FROM city_table)], [Tree(Det[SEM='SELECT'], ['What']), Tree(N[SEM='City FROM city_table'], ['cities'])]), Tree(VP[SEM=(, , Country=\"greece\")], [Tree(IV[SEM=''], ['are']), Tree(PP[SEM=(, Country=\"greece\")], [Tree(P[SEM=''], ['in']), Tree(NP[SEM='Country=\"greece\"'], ['Greece'])])])])]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grammer Query\n",
+    "from nltk import load_parser\n",
+    "test = load_parser('grammars/book_grammars/sql1.fcfg')\n",
+    "q = \"What cities are in Greece\"\n",
+    "t = list(test.parse(q.split()))\n",
+    "t"
    ]
   },
   {
@@ -241,10 +305,7 @@
     }
    ],
    "source": [
-    "from nltk import load_parser\n",
-    "test = load_parser('grammars/book_grammars/sql1.fcfg')\n",
-    "q = \" What cities are in Greece\"\n",
-    "t = list(test.parse(q.split()))\n",
+    "# on tology에서 Query의 적용\n",
     "ans = t[0].label()['SEM']\n",
     "ans = [s for s in ans if s]\n",
     "q = ' '.join(ans)\n",
@@ -276,7 +337,10 @@
    "metadata": {},
    "source": [
     "### 02 NER 소개\n",
-    "Named Entity Recognition : 고유명사, 개체명이 문서에 위치하는 과정"
+    "Named Entity Recognition : 고유명사, 개체명이 문서에 위치하는 과정\n",
+    "1. 명제논리 : True/False, And/Or 단답식 질의에 대응하는 논리 ( 단점> 내용의 확장은 불가능)\n",
+    "2. 서술논리 : 명제 논리를 확장하는 논리\n",
+    "이들을 활용하여 <strong>On Tology</strong>를 구축한다"
    ]
   },
   {
@@ -331,11 +395,12 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# NER을 수행하기 위한, '스탠포드 tagger'를 활용한다\n",
-    "\n",
+    "# https://stackoverflow.com/questions/32819573/nltk-why-does-nltk-not-recognize-the-classpath-variable-for-stanford-ner\n",
     "from nltk.tag import StanfordNERTagger\n",
     "# sentence = StanfordNERTagger('english.all.3class.distsim.crf.ser.gz')  # Lookup Error가 발생한다\n",
     "# sentence.tag('John goes to NY'.split())"
@@ -479,9 +544,9 @@
    ],
    "source": [
     "# 개체명을 감지하는 nltk를 다른예제로 수행\n",
-    "\n",
     "import nltk\n",
     "from nltk.corpus import conll2002\n",
+    "\n",
     "for documents in conll2002.chunked_sents('ned.train')[25]:\n",
     "    print(documents)"
    ]
@@ -505,8 +570,7 @@
    ],
    "source": [
     "# chunk는 plain text를 의미상 관련된 순서로 분할하는데 사용\n",
-    "# 영어, 네델란드어, 스페인어, 포르투갈어를 활용가능하다\n",
-    "\n",
+    "# 영어, 네델란드어, 스페인어, 포르투갈어를 활용가능하다`\n",
     "import nltk\n",
     "sentence = \"I went to Greece to meet John\"\n",
     "tok = nltk.word_tokenize(sentence)\n",
@@ -646,7 +710,6 @@
    ],
    "source": [
     "# HMM을 사용해서 NER을 수행하는 Annotation, HMM train, HMM test 단계를 거친다\n",
-    "\n",
     "import nltk\n",
     "nltk.tag.hmm.demo_pos()"
    ]
@@ -750,7 +813,7 @@
    ],
    "source": [
     "# POS 태깅을 사용해 NER을 수해한다\n",
-    "import nltk\n",
+    "# import nltk\n",
     "from nltk import pos_tag, word_tokenize\n",
     "pos_tag(word_tokenize(\"John and Smith are going to NY and Germany\"))"
    ]
@@ -777,14 +840,14 @@
    ],
    "source": [
     "# NLTK에서 POS 태깅이 수행되고, POS태그 정보가 객체명을 검색하는 예제\n",
-    "import nltk\n",
+    "# import nltk\n",
     "from nltk.corpus import brown\n",
     "from nltk.tag import UnigramTagger\n",
-    "tagger = UnigramTagger(brown.tagged_sents(categories='news')[:700])\n",
     "\n",
+    "tagger = UnigramTagger(brown.tagged_sents(categories='news')[:700])\n",
     "sentence = ['John','and','Smith','went','to','NY','and','Germany']\n",
     "for word, tag in tagger.tag(sentence):\n",
-    "    print(word,'->',tag)"
+    "    print(word,'--->',tag)"
    ]
   },
   {
@@ -827,7 +890,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 주어진 품사tag로 sunsets을 반복한다, POS를 지정하지 않으면 sunsets이 로드된다\n",
@@ -1184,7 +1249,45 @@
    "source": [
     "<br></br>\n",
     "## 3 Wordnet을 사용한 의미판별\n",
-    "의미판별을 위해, Sense(감각) 혹은 의미(meaning)에 기초하여, 둘 이상의 동일한 철자 혹은 동일한 소리를 구별하는 직업이다"
+    "의미판별을 위해, Sense(감각) 혹은 의미(meaning)에 기초하여, 둘 이상의 동일한 철자 혹은 동일한 소리를 구별하는 직업이다\n",
+    "\n",
+    "<img src=\"http://www.nltk.org/images/wordnet-hierarchy.png\" align=\"left\" width=\"700\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 유사성 알고리즘\n",
+    "Path Distance Similarity : https://www.youtube.com/watch?v=c9zcE1bQhm8\n",
+    "\n",
+    "<img src=\"https://image.slidesharecdn.com/lec-13-pptx-lsa303-introduction-to-computational-linguistics2632/95/lec-13-pptx-lsa303-introduction-to-computational-linguistics-37-638.jpg?cb=1422299155\" align=\"left\" width=\"300px\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wu-Palmer Similarity : https://www.slideshare.net/sharaf/text-similarity\n",
+    "\n",
+    "<img src=\"https://image.slidesharecdn.com/textsimilarity-100211062411-phpapp02/95/text-similarity-16-728.jpg?cb=1265869478\" align=\"left\" width=\"300px\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LCS: Least Common Subsumer (LCS) (most informative subsumer)<br>\n",
+    "\n",
+    "Leacock Chodorow Similarity https://www.slideshare.net/sharaf/text-similarity\n",
+    "\n",
+    "Resnik Score https://www.slideshare.net/sharaf/text-similarity\n",
+    "\n",
+    "Lin Similarity\n",
+    "\n",
+    "Jiang-Conrath Similarity http://aclweb.org/anthology//N/N10/N10-1047.pdf \n",
+    "\n",
+    "LCS 빈도가 높고, 하위어가 빈도 낮으면 유사도 낮음 -> 일반적일 수록. 빈도수가 높다. 일반적인 말로 묶이면, 관련 없는 단어다"
    ]
   },
   {
@@ -1207,6 +1310,7 @@
    "outputs": [],
    "source": [
     "# Lesk 알고리즘\n",
+    "\n",
     "#   오리지널, cos() Lesk, simple Lesk, 적용/확장 Lesk, 강화 Lesk\n",
     "# 최대 유사성 (similarity) : 정보의 내용, 경로 유사성\n",
     "# Supervised WSD (지도방식) : IMS(It Makes Sense), SVM WSD\n",
@@ -1224,6 +1328,7 @@
    "outputs": [],
    "source": [
     "# NLTK의 WordNet의 감각 유사성 알고리즘\n",
+    "\n",
     "# Resnik Score: 두 개의 token의 유사성을 결정하는 점수\n",
     "# Wu-Palmer Similarity: 두 감각의 깊이에 기초한 token의 유사성\n",
     "# Path Distance Similarity: IS-분류법에 기반한 token의 유사성\n",
@@ -1337,6 +1442,35 @@
     "print(lion.jcn_similarity(cat, brown_ic))\n",
     "print(lion.jcn_similarity(cat, genesis_ic))\n",
     "print(lion.lin_similarity(cat, semcor_ic))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## - Reference\n",
+    "#프린스턴 워드넷 홈페이지<br>\n",
+    "https://wordnet.princeton.edu <br>\n",
+    "#NLTK Wordnet 깃허브 코드<br>\n",
+    "https://github.com/nltk/nltk/blob/develop/nltk/corpus/reader/wordnet.py<br>\n",
+    "#WSD 가 머지??<br>\n",
+    "https://web.stanford.edu/~jurafsky/slp3/slides/Chapter18.wsd.pdf<br>\n",
+    "https://arxiv.org/pdf/1508.01346.pdf Pal, A. R., & Saha, D. (2015). Word sense disambiguation: A survey. arXiv\n",
+    "preprint arXiv:1508.01346. <br>\n",
+    "https://www.cs.cornell.edu/courses/cs4740/2012sp/lectures/wsd-2-4pp.pdf<br>\n",
+    "#Neural Network WSD Papers<br>\n",
+    "https://arxiv.org/pdf/1502.07257.pdf BREAKING STICKS AND AMBIGUITIES WITH ADAPTIVE SKIP-GRAM <br>\n",
+    "https://arxiv.org/pdf/1606.03568.pdf Word Sense Disambiguation using a Bidirectional LSTM<br>\n",
+    "#Word Similarity youtube<br>\n",
+    "https://www.youtube.com/watch?v=c9zcE1bQhm8 Word Similarity and Thesaurus Methods -NLP-Dan Jurafsky & Chris Manning<br>\n",
+    "https://www.slideshare.net/sharaf/text-similarity Text Similarity<br>\n",
+    "http://aclweb.org/anthology//N/N10/N10-1047.pdf Information Content Measures of Semantic Similarity Perform Better Without Sense-Tagged Text <br>\n",
+    "#Resnik<br>\n",
+    "https://www.jair.org/media/514/live-514-1722-jair.pdf Semantic Similarity in a Taxonomy  An Information Based\n",
+    "Measure and its Application Natural\n",
+    "to Problems Language\n",
+    "#Information Content (IC)<br>\n",
+    "http://aclweb.org/anthology//N/N10/N10-1047.pdf Information Content Measures of Semantic Similarity Perform Better Without Sense-Tagged Text<br>"
    ]
   }
  ],
