--- a/08.Info_Retrieval.ipynb
+++ b/08.Info_Retrieval.ipynb
@@ -12,6 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br></br>\n",
     "## 1 정보검색 소개\n",
     "Introducing information retrieval"
    ]
@@ -204,6 +205,8 @@
     "### 02 벡터 공간 모델을 사용한 정보 검색\n",
     "Term Frequency (용어 빈도) Inverse Document Frequency\n",
     "\n",
+    "https://thinkwarelab.wordpress.com/2016/11/14/ir-tf-idf-%EC%97%90-%EB%8C%80%ED%95%B4-%EC%95%8C%EC%95%84%EB%B4%85%EC%8B%9C%EB%8B%A4/\n",
+    "\n",
     "https://gist.github.com/himzzz/4105717"
    ]
   },
@@ -243,7 +246,7 @@
     "from nltk.tokenize import RegexpTokenizer\n",
     "from nltk import bigrams, trigrams\n",
     "\n",
-    "stopwords = nltk.corpus.stopwords.words('portuguese')\n",
+    "stopwords = nltk.corpus.stopwords.words('english')\n",
     "tokenizer = RegexpTokenizer(\"[\\w’]+\", flags=re.UNICODE)"
    ]
   },
@@ -348,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -381,7 +386,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -396,6 +403,54 @@
    "source": [
     "for item in sorted(words.items(), key=lambda x: x[1], reverse=True):\n",
     "    print (\"%f <= %s\" % (item[1], item[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03 word2Vec 의 구현\n",
+    "https://m.blog.naver.com/pdc222/220693024820"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('queen', 0.6472059488296509)]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gensim\n",
+    "sentences = gensim.models.word2vec.Text8Corpus('./data/word2Vec-sample.txt')\n",
+    "model = gensim.models.word2vec.Word2Vec(sentences, size = 200)\n",
+    "\n",
+    "# + woman + king - man \n",
+    "model.most_similar(positive = ['woman', 'king'], negative = ['man'], topn = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03 tf-idf 간단구현\n",
+    "http://www.bogotobogo.com/python/NLTK/tf_idf_with_scikit-learn_NLTK.php"
    ]
   },
   {
@@ -503,7 +558,10 @@
    "metadata": {},
    "source": [
     "## 4 질의 응답 시스템\n",
-    "Question-answering system"
+    "Question-answering system\n",
+    "1. 질의문 사실 추출 : 개체추출 (NER 고유명사 추출), 관계추출 (Text 의미 추출)\n",
+    "2. 질의내용의  이해 : Parse Tree 생성 등을 활용\n",
+    "3. 응답의 생성 : 주어진 질의 중 가장 높은 응답을 추출"
    ]
   },
   {
@@ -514,16 +572,16 @@
     {
      "data": {
       "text/plain": [
-       "['numerical',\n",
+       "['statistic',\n",
        " 'short',\n",
-       " ',',\n",
-       " 'intended',\n",
-       " 'statistic',\n",
-       " 'frequency–inverse',\n",
-       " 'frequency',\n",
-       " 'document',\n",
        " 'tf–idf',\n",
-       " 'term']"
+       " ',',\n",
+       " 'frequency–inverse',\n",
+       " 'document',\n",
+       " 'term',\n",
+       " 'intended',\n",
+       " 'numerical',\n",
+       " 'frequency']"
       ]
      },
      "execution_count": 22,
