--- a/Web/04.Text Web Mining.ipynb
+++ b/Web/04.Text Web Mining.ipynb
@@ -147,7 +147,7 @@
     "모델목록 : Boolean Model(불리언), Vector space model(벡터), Probabilistic model(확률)\n",
     "\n",
     "Vector 모델 목록\n",
-    "1. TF-IDF(Term Frequency-Inverse Document Frequency) 단어빈도 - 역문서 빈도\n",
+    "1. TF-IDF(Term Frequency-Inverse Document Frequency) 문서 내 단어의 빈도 (값이 클수록 해당 문서의 주요 단어다)\n",
     "2. LSA(Latent Semantic Analysis) 잠재의미분석\n",
     "3. Doc2Vec (Word2Vec)\n",
     "\n",
@@ -180,7 +180,7 @@
     "\n",
     "$\\sum_t V_t^T $ : 잠재공간에 투영된 문서의 전치행렬\n",
     "\n",
-    "$\\sum_{t(t*t)}$ : 특기앖으로 이루어진 대각행렬\n",
+    "$\\sum_{t(t*t)}$ : 특이값으로 이루어진 대각행렬\n",
     "$$ q_t = q^TU_t\\sum_t^{-1}$$ 쿼리벡터도 잠재공간에 투영된다\n",
     "\n",
     "각 문서는 <strong>$q_t^T$</strong>와 <strong>$\\cos\\theta$유사도</strong>로 비교될 수 있지만, \n",
@@ -193,15 +193,15 @@
    "metadata": {},
    "source": [
     "### 03 Word2Vec\n",
-    "두가지 아키텍처 알고리즘 중 하나를 선택하여, \n",
+    "두가지 아키텍처 알고리즘 <strong>(CBOW(연속단어주머니), Skip-gram)</strong> 중 하나를 선택하여, \n",
     "\n",
-    "N개의 뉴런(Neuron)(가중치)으로 된 Hidden Layer를 훈련시킨다.\n",
+    "$N$개의 뉴런(Neuron)(가중치)으로 된 Hidden Layer를 훈련시킨다.\n",
     "\n",
-    "즉 N개의 뉴런(가중치) 'h'를 갖는 <strong>단일계층 학습</strong>으로 얕은학습(shallow learning)이다 \n",
+    "즉 $N$개의 뉴런(가중치) 'h'를 갖는 <strong>단일계층 학습</strong>으로 얕은학습(shallow learning)을 사용 \n",
     "\n",
-    "행렬W는 <strong>입력벡터를 hidden layer</strong>로 변환하며, <strong>출력계층에서는 Target</strong>을 평가한다\n",
+    "행렬$W$는 <strong>입력벡터를 hidden layer</strong>로 변환하며, <strong>출력계층에서는 Target</strong>을 평가한다\n",
     "\n",
-    "train에서 W와 W\"의 수정은 <strong>확률적 내리막 경사법(Stochastic Gradient Descent)</strong>를 사용한다\n",
+    "train에서 $W$와 $W\"$의 수정은 <strong>확률적 내리막 경사법(Stochastic Gradient Descent)</strong>를 사용한다\n",
     "\n",
     "https://shuuki4.wordpress.com/2016/01/27/word2vec-%EA%B4%80%EB%A0%A8-%EC%9D%B4%EB%A1%A0-%EC%A0%95%EB%A6%AC/"
    ]
@@ -222,10 +222,10 @@
     "<h4>Projection Layer에서 Output Layer로 갈 때는</h4> NxV 크기의 Weight Matrix W’ 가 있다.  \n",
     "(주의해야할 점은, 두 행렬은 transpose이 아닌, 별개의 행렬이라는 점이다)\n",
     "<h4>Process 정리</h4>\n",
-    " 1. 즉 단어들을 one-hot encoding으로 입력\n",
-    "2. 여러단어를 각각 projection 시킨 후, 벡터들의 평균을 구해서 Projection Layer에 보낸다. \n",
-    "3. Weight Matrix를 곱해서 Output Layer로 보내고 softmax 계산을 한 후, \n",
-    "4. 이 결과를 진짜 단어의 one-hot encoding과 비교하여 에러를 계산한다.\n",
+    "1. 모든 단어들을 <strong>one-hot encoding</strong>으로 입력\n",
+    "2. 여러단어를 각각 projection 시킨 후, <strong>벡터들의 평균</strong>을 구해서 Projection Layer에 보낸다. \n",
+    "3. <strong>Weight Matrix</strong>를 곱해서 Output Layer로 보내고 <strong>softmax 계산</strong>을 한 후, \n",
+    "4. 이 결과를 <strong>진짜 단어의 one-hot encoding과 비교</strong>하여 에러를 계산한다.\n",
     "\n",
     "<h4>CBOW 모델에서 하나의 단어 처리 계산량</h4>\n",
     "1. C개의 단어를 Projection 하는 데에 C x N\n",
